--- a/db-migrations-cordova/www/index.html
+++ b/db-migrations-cordova/www/index.html
@@ -29,6 +29,11 @@
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
       <ion-content>
+        <div ng-controller="LogController">
+          <p ng-repeat="message in messages">
+            {{message}}
+          </p>
+        </div>
       </ion-content>
     </ion-pane>
   </body>
