Testing sqlite queries with websql

--- a/db-migrations-cordova/www/spec.html
+++ b/db-migrations-cordova/www/spec.html
@@ -27,10 +27,15 @@
         <script type="text/javascript" src="spec/lib/jasmine.js"></script>
         <script type="text/javascript" src="spec/lib/jasmine-html.js"></script>
         <script src="spec/lib/jasmine-as-promised.js"></script>
+        <script src="spec/lib/jasmine-beforeAll.js"></script>
 
         <!-- ionic/angularjs js -->
 		<script src="lib/ionic/js/ionic.bundle.js"></script>
 		<script src="lib/ngCordova/dist/ng-cordova.js"></script>
+		<script src="lib/angular-mocks/angular-mocks.js"></script>
+		<script src="lib/q/q.js"></script>
+		
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
         <script src="js/app.js"></script>
 
